[package]
name = "discord-tokio"
version = "0.9.0"
edition = "2021"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Async client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/spicesw/discord-tokio"
documentation = "https://docs.rs/discord/0.9.0"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide", "byteorder"]

[dependencies]
base64-rs          = "0.1.1"
bitflags           = "1.2"
byteorder          = { version = "1.3", optional = true }
flate2             = "1.0"
futures            = "0.3"
opus               = { version = "0.2.1", optional = true }
reqwest            = { version = "0.11", features = ["json", "multipart"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_repr         = "0.1.17"
tokio              = { version = "1", features = ["macros", "time"] }
tracing            = "0.1"
websockets         = { git = "https://github.com/spiceswag/websockets.git" }

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.sodiumoxide]
version = "0.2.5"
default-features = false
features = ["std"]
optional = true
